force-app/main/default/objects/Opportunity/fields/Type_of_Insulin_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insulin_Therapy__c</fullName>
    <description>This is same &apos;Type of Insulin Therapy&apos; as on Account</description>
    <formula>TEXT(Account.Type_of_Insulin_Therapy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Insulin Therapy</label>
    <type>Text</type>
</CustomField>