force-app/main/default/objects/Opportunity/fields/Unique_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opportunities__c</fullName>
    <description>Field will be used in reports to find out unique Opportunities.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>