force-app/main/default/objects/Opportunity/fields/X19_VAT__c.field-meta.xml
<CustomField>
    <fullName>X19_VAT__c</fullName>
    <description>Calculates 19% VAT for Germany.</description>
    <formula>IF (OR(ISPICKVAL(StageName, &apos;Closed - Complete&apos;),
( TODAY() &lt; DATE(2020,06,15))),
Invoice_Net_Price__c *0.19,
Invoice_Net_Price__c *0.16 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>