force-app/main/default/objects/Opportunity/fields/Xmer_Medical_Advice_Number_Exception__c.field-meta.xml
<CustomField>
    <fullName>Xmer_Medical_Advice_Number_Exception__c</fullName>
    <description>Transmitter medical advice number exception number</description>
    <label>Xmer Medical Advice Number Exception</label>
    <summarizedField>OpportunityLineItem.Medical_Advice_Number_Exception__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Medical_Advice_Number_Exception__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>Transmitter, Virtual</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>