force-app/main/default/objects/Opportunity/recordTypes/CA_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>CA_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CA Sales Process</businessProcess>
    <description>Canadian Consumer Opportunity processing for Insurance Benefits</description>
    <label>CA Opportunity</label>
</RecordType>