force-app/main/default/objects/Opportunity/recordTypes/CH_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>CH_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CH Sales Process</businessProcess>
    <description>Tracks opportunities for Switzerland</description>
    <label>CH Opportunity</label>
</RecordType>