force-app/main/default/objects/Opportunity/recordTypes/DE_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>DE_Opportunity</fullName>
    <active>true</active>
    <businessProcess>DE Sales Process</businessProcess>
    <description>Tracks opportunities for Germany.</description>
    <label>DE Opportunity</label>
</RecordType>