force-app/main/default/objects/Opportunity/recordTypes/GB_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>GB_Opportunity</fullName>
    <active>true</active>
    <businessProcess>GB Sales Process</businessProcess>
    <description>Tracks opportunities for UK</description>
    <label>GB Opportunity</label>
</RecordType>