force-app/main/default/objects/Opportunity/recordTypes/IE_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>IE_Opportunity</fullName>
    <active>true</active>
    <businessProcess>IE Sales Process</businessProcess>
    <description>Tracks opportunities for Ireland</description>
    <label>IE Opportunity</label>
</RecordType>