force-app/main/default/objects/Opportunity/recordTypes/SI_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>SI_Opportunity</fullName>
    <active>true</active>
    <businessProcess>SI Sales Process</businessProcess>
    <description>Slovenia Opportunity</description>
    <label>SI Opportunity</label>
</RecordType>