force-app/main/default/objects/Opportunity/validationRules/All_Check_Oppty_For_Inactive_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Check_Oppty_For_Inactive_Customer</fullName>
    <active>true</active>
    <description>Do not let users to create Opportunity for Inactive customers.</description>
    <errorConditionFormula>AND (
 NOT($Profile.Name = &quot;System Administrator&quot;),
 ISNEW(),
 Account.Inactive__c = TRUE
)</errorConditionFormula>
    <errorMessage>Opportunity cannot be created for Inactive customer.</errorMessage>
</ValidationRule>