force-app/main/default/objects/Opportunity/validationRules/All_Chk_For_Competitor_When_Canceling_Op.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Chk_For_Competitor_When_Canceling_Op</fullName>
    <active>true</active>
    <description>Competitor should be selected when choosing the cancel reason as Competitor when cancelling the opportunity</description>
    <errorConditionFormula>AND (
 NOT($Profile.Name = &quot;System Administrator&quot;),
 CONTAINS(TEXT(StageName), &apos;Cancel&apos;),
 TEXT(Cancel_Reason__c) = &apos;Competition&apos;,
 ISBLANK(TEXT(Competitor__c))
)</errorConditionFormula>
    <errorMessage>&apos;Competitor&apos; should be selected.</errorMessage>
</ValidationRule>