force-app/main/default/objects/Opportunity/validationRules/All_Do_Not_Allow_To_Change_OpptyLineItem.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Do_Not_Allow_To_Change_OpptyLineItem</fullName>
    <active>true</active>
    <description>Do not allow to change opportunity products after Oppty is closed</description>
    <errorConditionFormula>AND (
 NOT($Profile.Name = &quot;System Administrator&quot;),
 NOT(ISNEW()),
 Probability &gt; 0.60,
 ISCHANGED( Count_Of_Opportunity_Products__c )
)</errorConditionFormula>
    <errorMessage>Opportunity products cannot be altered past Cost Estimate stage.</errorMessage>
</ValidationRule>