force-app/main/default/objects/Opportunity/validationRules/All_Oppty_Stg_Cannot_Be_Chg_Past_Prob_95.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Oppty_Stg_Cannot_Be_Chg_Past_Prob_95</fullName>
    <active>true</active>
    <description>Rule to not let the users to change the stage on Oppty past Order Fulfillment stage.</description>
    <errorConditionFormula>AND (
 PRIORVALUE(Probability) &gt;= 0.95,
 NOT(PRIORVALUE( IsClosed )) = True,
 Probability &lt; 0.95,
 NOT(CONTAINS(TEXT(StageName), &apos;Cancel&apos;)),
 NOT(OR(
 $Profile.Name = &quot;System Administrator&quot;,
 $Profile.Name = &quot;Data Integrator&quot;,
 CONTAINS($Profile.Name, &apos;Salesforce Admin&apos;),
 $User.Alias = &quot;autoproc&quot;))
)</errorConditionFormula>
    <errorMessage>This operation cannot be perfomed as Opportunity has passed &apos;Order Fulfillment&apos; stage.</errorMessage>
</ValidationRule>