force-app/main/default/objects/Opportunity/validationRules/All_Validate_PriceBook_Chosen.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Validate_PriceBook_Chosen</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(Pricebook2.Price_List_Target__c),
INCLUDES(Pricebook2.Price_List_Target__c , &apos;ALL&apos;),
AND(CONTAINS(Account.RecordType.Name,&apos;Consumer&apos;),INCLUDES(Pricebook2.Price_List_Target__c , &apos;Consumer&apos;)) 
)
)</errorConditionFormula>
    <errorMessage>Chosen price book is not applicable to this type of Account.</errorMessage>
</ValidationRule>