force-app/main/default/objects/Opportunity/validationRules/AT_Doc_Collection_Completed_B4_Cost_Est.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Doc_Collection_Completed_B4_Cost_Est</fullName>
    <active>true</active>
    <description>For Austria, before moving to the stage of Cost Estimate, Docs should be collected or not needed from Customers.</description>
    <errorConditionFormula>And(
BEGINS(RecordType.DeveloperName, &apos;AT_&apos;),
NOT(OR(ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;All Docs Received&apos;), ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;Not Required&apos;))), 
ISPICKVAL(StageName, &apos;Order Fulfillment&apos;)
)</errorConditionFormula>
    <errorMessage>Before completing Doc Collection Stage, Customer Docs Collection Status field should have &apos;All Docs Received&apos; or &apos;Not Required&apos; value.</errorMessage>
</ValidationRule>