force-app/main/default/objects/Opportunity/validationRules/AT_Doc_SentDate_Is_Less_Than_RecieDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Doc_SentDate_Is_Less_Than_RecieDate</fullName>
    <active>true</active>
    <description>Austria</description>
    <errorConditionFormula>And(
BEGINS(RecordType.DeveloperName, &apos;AT_&apos;),
OR(ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;All Docs Sent&apos;), ISPICKVAL( CA_Customer_Docs_Collection_Status__c, &apos;All Docs Received&apos;)),
NOT(ISBLANK(Customer_Docs_Received_Date__c)),
NOT(ISBLANK(Customer_Docs_Sent_Date__c)),
Customer_Docs_Sent_Date__c &gt;= Customer_Docs_Received_Date__c
)</errorConditionFormula>
    <errorMessage>&apos;Customer Docs Sent Date&apos; should be less than &apos;Customer Docs Received Date&apos;</errorMessage>
</ValidationRule>