force-app/main/default/objects/Opportunity/validationRules/AT_Opplineitem_B4_Orderfulfill.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Opplineitem_B4_Orderfulfill</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
BEGINS(RecordType.DeveloperName, &apos;AT_&apos;),
(Count_Of_Opportunity_Products__c == 0),
ISPICKVAL(StageName, &apos;Order Fulfillment&apos;)
)</errorConditionFormula>
    <errorMessage>Before moving to the stage of Order Fulfillment, please add products.</errorMessage>
</ValidationRule>