force-app/main/default/objects/Opportunity/validationRules/AT_Receive_Sent_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Receive_Sent_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>And(
BEGINS(RecordType.DeveloperName, &apos;AT_&apos;),
ISPICKVAL( CA_Customer_Docs_Collection_Status__c, &apos;All Docs Received&apos;),
OR(ISBLANK(Customer_Docs_Received_Date__c), ISBLANK(Customer_Docs_Sent_Date__c)),
ISPICKVAL(StageName, &apos;Order Fulfillment&apos;)
)</errorConditionFormula>
    <errorMessage>Before moving out of Customer Doc Collection Stage, Customer Docs Received Date and Customer Docs Sent Date should be filled.</errorMessage>
</ValidationRule>