force-app/main/default/objects/Opportunity/validationRules/CA_Benefit_Change_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Benefit_Change_VR</fullName>
    <active>true</active>
    <description>Benefit not allowed to change in cost Estimate change</description>
    <errorConditionFormula>AND (
BEGINS(RecordType.DeveloperName, &apos;CA_&apos;),
ISCHANGED(Benefit__c ),
NOT(ISBLANK(PRIORVALUE(Benefit__c))),
NOT(OR(ISPICKVAL(StageName, &apos;New Opportunity&apos;),
       ISPICKVAL(StageName, &apos;Doc Collection&apos;)))
)</errorConditionFormula>
    <errorMessage>Benefit should not be changed after Doc Collection Stage.</errorMessage>
</ValidationRule>