force-app/main/default/objects/Opportunity/validationRules/CA_Beneft_Needed_Before_Cost_Estimate_st.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Beneft_Needed_Before_Cost_Estimate_st</fullName>
    <active>false</active>
    <description>For Canada, before moving to the stage of Cost Estimate, Benefit provider, Med Fac and Prescriber info are needed.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
OR(ISBLANK(Benefit__c), ISBLANK(Prescriber__c), ISBLANK(Medical_Facility__c)), 
ISPICKVAL(StageName, &apos;Cost Estimate&apos;))</errorConditionFormula>
    <errorMessage>Before moving to the stage of Cost Estimate, Benefit provider, Med Fac and Prescriber info are needed.</errorMessage>
</ValidationRule>