force-app/main/default/objects/Opportunity/validationRules/CA_Cancelled_Stage_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Cancelled_Stage_Val</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Cancelled&apos;),
ISPICKVAL(CA_Cancelled_Reason__c, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Please select any Cancelled Reason.</errorMessage>
</ValidationRule>