force-app/main/default/objects/Opportunity/validationRules/CA_Closed_Opportunities_Not_Changeable.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Closed_Opportunities_Not_Changeable</fullName>
    <active>true</active>
    <description>For Canada, Closed Opportunities should not be changed (other than Close Reason).</description>
    <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
NOT($Profile.Name = &quot;CA_Salesforce_Admin&quot;),
BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
OR(ISPICKVAL( PRIORVALUE(StageName), &apos;Closed - Complete&apos;),
   ISPICKVAL( StageName, &apos;Closed - Complete&apos;)),
OR( ISCHANGED( AccountId ),  ISCHANGED( Amount ) ,
 ISCHANGED( Benefit_Prior_Auth_Denied_or_Approved__c ),
 ISCHANGED( Benefit_Authorization_Number__c ), 
 ISCHANGED( Benefit_Auth_End_Date__c ) ,  
 ISCHANGED( Benefit_Auth_Start_Date__c ) ,  
 ISCHANGED( Benefit__c ) ,  
 ISCHANGED( CA_Benefit_Plan_Year_Type__c ) ,  
 ISCHANGED(  Competitor__c ) ,  
 ISCHANGED( Cash_Pay__c ),   
 ISCHANGED( Medical_Facility__c ),  
 ISCHANGED( CurrencyIsoCode ),  
 ISCHANGED( Name ),  
 ISCHANGED(  OwnerId  ) ,  
 ISCHANGED( Prescriber__c ),  
 ISCHANGED(Country__c),  
 ISCHANGED( Parent_Opportunity__c ),  
 /*ISCHANGED( CloseDate ),*/   
 
 ISCHANGED( Type ),
 ISCHANGED( High_Priority__c ),  
 ISCHANGED(CA_Other_Authorization_Details__c)  ,
 ISCHANGED(Sensor_Max__c),
 ISCHANGED(Transmitter_Max__c),
 ISCHANGED(Receiver_Max__c),
 ISCHANGED(Receiver_Max_Qty__c),
 ISCHANGED(Benefit_Coverage__c),
 ISCHANGED(Benefit_Co_Pay__c)
)
)</errorConditionFormula>
    <errorMessage>Closed Opportunities can not be changed</errorMessage>
</ValidationRule>