force-app/main/default/objects/Opportunity/validationRules/CA_Cost_Est_Completed_B4_Ordful.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Cost_Est_Completed_B4_Ordful</fullName>
    <active>true</active>
    <description>Before moving to the stage of Order Fulfillment, Determination and Estimate status should be collected or not needed from Customers and Prescribers.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
OR(ISPICKVAL(Estimate_Status__c, &apos;Not Sent&apos;), 
OR(ISPICKVAL(Determination_Status__c, &apos;Pending&apos;), ISPICKVAL(Determination_Status__c, &apos;Not Received&apos;))),
ISPICKVAL(StageName, &apos;Order Fulfillment&apos;))</errorConditionFormula>
    <errorMessage>Before moving to the stage of Order Fulfillment, Determination and Estimate status should be collected or not needed from Customers and Prescribers.</errorMessage>
</ValidationRule>