force-app/main/default/objects/Opportunity/validationRules/CA_Coverage_Confirmed_Before_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Coverage_Confirmed_Before_Closed</fullName>
    <active>false</active>
    <description>For Canada, Coverage Should be confirmed and checked before Closing the Opportunity.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;, 
ISPICKVAL(StageName, &apos;Closed - Complete&apos;), 
NOT( CA_Coverage_Confirmed__c ))</errorConditionFormula>
    <errorMessage>Before Closing Opportunity, Coverage should be confirmed with Patient/Guardian.</errorMessage>
</ValidationRule>