force-app/main/default/objects/Opportunity/validationRules/CA_Doc_Collection_Completed_B4_Cost_Est.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Doc_Collection_Completed_B4_Cost_Est</fullName>
    <active>true</active>
    <description>For Canada, before moving to the stage of Cost Estimate, Docs should be collected or not needed from Customers and Prescribers.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
OR(NOT(OR(ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;All Docs Received&apos;), ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;Not Required&apos;))),
NOT(OR(ISPICKVAL(CA_Prescriber_Docs_Collection_Status__c, &apos;Docs Received&apos;), ISPICKVAL( CA_Prescriber_Docs_Collection_Status__c, &apos;Not Required&apos;)))), 
ISPICKVAL(StageName, &apos;Cost Estimate&apos;))</errorConditionFormula>
    <errorMessage>Before moving to the stage of Cost Estimate,  Docs should be collected or not needed from Customers and Prescribers.</errorMessage>
</ValidationRule>