force-app/main/default/objects/Opportunity/validationRules/CA_Doc_Collection_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Doc_Collection_Val</fullName>
    <active>true</active>
    <description>Before proceeding to &apos;Cost Estimate&apos; stage, opportunty must have linked Benefit, Medical Facility, and Prescriber.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
ISCHANGED(StageName),
OR(
ISBLANK(Benefit__c),
ISBLANK(Medical_Facility__c),
ISBLANK(Prescriber__c)),
ISPICKVAL(StageName, &apos;Cost Estimate&apos;))</errorConditionFormula>
    <errorMessage>Before proceeding to &apos;Cost Estimate&apos; stage, Opportunity must have linked Benefit, Medical Facility, and Prescriber.</errorMessage>
</ValidationRule>