force-app/main/default/objects/Opportunity/validationRules/CA_Ins_Estimate_Pendi_B4_Ins_Res_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Ins_Estimate_Pendi_B4_Ins_Res_Pending</fullName>
    <active>false</active>
    <description>CA_Ins_Estimate_Pendi_B4_Ins_Res_Pending</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
OR(
NOT(
OR(ISPICKVAL(Estimate_To_Payor_Status__c, &apos;Received&apos;), ISPICKVAL(Estimate_To_Payor_Status__c, &apos;Appeal Received&apos;),ISPICKVAL(Estimate_To_Payor_Status__c, &apos;Appeal Received&apos;))),
NOT(OR(ISPICKVAL(CA_Estimate_to_Patient_Status__c, &apos;Received&apos;), ISPICKVAL( CA_Estimate_to_Patient_Status__c, &apos;Not Required&apos;)))),

/*ISPICKVAL(StageName, &apos;Ins Response Pending&apos;),*/
NOT(ISPICKVAL(StageName, &apos;Cancelled&apos;)),
NOT(ISPICKVAL(StageName,&apos;Ins Estimate Pending&apos;)),
ISPICKVAL( PRIORVALUE( StageName ) , &quot;Ins Estimate Pending&quot; )

)</errorConditionFormula>
    <errorMessage>Before changing the Stage, Docs should be collected or not needed from Customers. You can also Cancel the Opportunity if needed.</errorMessage>
</ValidationRule>