force-app/main/default/objects/Opportunity/validationRules/CA_OrderFulfil_Stage_notallowedprevstage.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_OrderFulfil_Stage_notallowedprevstage</fullName>
    <active>true</active>
    <description>You are not allowed to select previous stage.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
ISCHANGED(StageName),
OR(ISPICKVAL(StageName, &apos;Cost Estimate&apos;),
(ISPICKVAL(StageName, &apos;New Opportunity&apos;)),
(ISPICKVAL(StageName, &apos;Customer Doc Collection&apos;))),
ISPICKVAL(PRIORVALUE(StageName), &apos;Order Fulfillment&apos;)
)</errorConditionFormula>
    <errorMessage>You are not allowed to select previous stage.</errorMessage>
</ValidationRule>