force-app/main/default/objects/Opportunity/validationRules/CA_OrderFulfil_Stage_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_OrderFulfil_Stage_Val</fullName>
    <active>true</active>
    <description>Opportunity may not proceed to &apos;Closed - Complete&apos; stage unless the Associated Order is in &apos;Activated&apos; (or later) stage.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
ISCHANGED(StageName),
ISPICKVAL(StageName, &apos;Closed - Complete&apos;),
ISPICKVAL(PRIORVALUE(StageName), &apos;Order Fulfillment&apos;),
/* OR(ISPICKVAL(Associated_Order__r.Status,&apos;Draft&apos; ),
ISPICKVAL(Associated_Order__r.Status, &apos;Shipping Hold&apos;))*/
NOT( $Profile.Name = &apos;System Administrator&apos;),
NOT( $Profile.Name = &apos;CA Salesforce Admin&apos;),
NOT( $Profile.Name = &apos;EU Salesforce Admin&apos;),
NOT( $User.Alias = &quot;autoproc&quot;)
)</errorConditionFormula>
    <errorMessage>You Can&apos;t Close an Opportunity. It will be automatically Closed for you.</errorMessage>
</ValidationRule>