force-app/main/default/objects/Opportunity/validationRules/CA_PT_Doc_Collection_B4_HCP_Doc.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_PT_Doc_Collection_B4_HCP_Doc</fullName>
    <active>true</active>
    <description>CA_Doc_Collection_Completed_B4_Cost_Est</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;CA_Opportunity&apos;,
NOT(
OR(ISPICKVAL(CA_Customer_Docs_Collection_Status__c,&apos;All Docs Received&apos;),
ISPICKVAL(CA_Customer_Docs_Collection_Status__c, &apos;Not Required&apos;))
),
/* ISPICKVAL(StageName, &apos;HCP Doc Collection&apos;), */
NOT(ISPICKVAL(StageName, &apos;Cancelled&apos;)),
NOT(ISPICKVAL(StageName,&apos;PT Doc Collection&apos;)),
ISPICKVAL( PRIORVALUE( StageName ) , &quot;PT Doc Collection&quot; )
)</errorConditionFormula>
    <errorMessage>Before changing the Stage, Docs should be collected or not needed from Customers. You can also Cancel the Opportunity if needed.</errorMessage>
</ValidationRule>