force-app/main/default/objects/Opportunity/validationRules/CH_Check_On_Required_Accnt_Fields_For_Op.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Check_On_Required_Accnt_Fields_For_Op</fullName>
    <active>true</active>
    <description>Check if all required fields are filled in for Opportunity creation</description>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;CH_Opportunity&apos;,
 (Created_From_Lead__c = False),
 NOT($Profile.Name = &quot;System Administrator&quot;),
 OR (
  ISBLANK(Account.Medical_Facility__c),
  ISBLANK(Account.Prescriber__c)
 )
)</errorConditionFormula>
    <errorMessage>For creating new Opportunity, Account should have Medical Facility, Prescriber updated. Please update required details on the Account.</errorMessage>
</ValidationRule>